--- a/index.html
+++ b/index.html
@@ -31,31 +31,67 @@
   <section class="hero">
     <div class="hero-container">
       <div class="hero-content">
-        <div class="hero-badge">✨ Trusted by thousands of professionals</div>
+        <div class="hero-badge">✨ Professional Record Management Platform</div>
         <h1 class="hero-title">
-          Organize Your Life with
-          <span class="gradient-text">Smart Record Management</span>
+          Manage Your
+          <span class="gradient-text">Daily & Professional Records</span>
+          <br />Like Never Before
         </h1>
         <p class="hero-description">
-          The all-in-one platform to track, manage, and sync your daily records. 
-          Secure cloud storage, powerful analytics, and seamless collaboration.
+          <strong>RecordFlow</strong> - The ultimate solution for managing both your <strong>daily personal records</strong> and <strong>professional work records</strong> in one powerful platform. 
+          Track everything from daily tasks to professional projects with ease, security, and efficiency.
         </p>
+        <div class="record-types-showcase">
+          <div class="record-type-card">
+            <div class="type-icon">📅</div>
+            <h4>Daily Records</h4>
+            <p>Track your daily activities, tasks, and personal records effortlessly</p>
+          </div>
+          <div class="record-type-card">
+            <div class="type-icon">💼</div>
+            <h4>Professional Records</h4>
+            <p>Manage work projects, professional tasks, and business records with precision</p>
+          </div>
+        </div>
+        <div class="storage-badges">
+          <div class="storage-badge-item">
+            <span class="badge-icon">☁️</span>
+            <span>Cloud Sync</span>
+          </div>
+          <div class="storage-badge-item">
+            <span class="badge-icon">💾</span>
+            <span>Local Backup</span>
+          </div>
+          <div class="storage-badge-item">
+            <span class="badge-icon">🔒</span>
+            <span>Encrypted</span>
+          </div>
+          <div class="storage-badge-item">
+            <span class="badge-icon">⚡</span>
+            <span>Real-time</span>
+          </div>
+        </div>
         <div class="hero-cta">
           <a href="signup.html" class="btn-hero-primary">Start Free Trial</a>
-          <a href="#features" class="btn-hero-secondary">Learn More</a>
+          <a href="dashboard.html" class="btn-hero-secondary">Try Demo</a>
+          <a href="#features" class="btn-hero-tertiary">Learn More</a>
         </div>
         <div class="hero-stats">
           <div class="stat-item">
-            <div class="stat-number">10K+</div>
+            <div class="stat-number" data-count="10000">0</div>
             <div class="stat-label">Active Users</div>
           </div>
           <div class="stat-item">
-            <div class="stat-number">1M+</div>
+            <div class="stat-number" data-count="1000000">0</div>
             <div class="stat-label">Records Managed</div>
           </div>
           <div class="stat-item">
             <div class="stat-number">99.9%</div>
             <div class="stat-label">Uptime</div>
+          </div>
+          <div class="stat-item">
+            <div class="stat-number">24/7</div>
+            <div class="stat-label">Support</div>
           </div>
         </div>
       </div>
@@ -65,18 +101,77 @@
             <div class="card-dots">
               <span></span><span></span><span></span>
             </div>
+            <span class="card-title">RecordFlow Dashboard</span>
           </div>
           <div class="card-content">
-            <div class="demo-record">
+            <div class="demo-record demo-daily">
               <div class="demo-record-header">
-                <span class="demo-badge">💼 Work</span>
-                <span class="demo-status completed">Completed</span>
+                <span class="demo-badge">📅 Daily Record</span>
+                <span class="demo-status completed">✅ Completed</span>
               </div>
-              <h3>Project Launch</h3>
-              <p>Successfully launched new product line</p>
-              <div class="demo-meta">📅 Today • ⭐ Priority</div>
+              <h3>Morning Workout</h3>
+              <p>Completed 30-minute fitness routine and tracked daily health progress</p>
+              <div class="demo-meta">📅 Today • 🏥 Health • 💾 Saved</div>
+            </div>
+            <div class="demo-record demo-record-2 demo-professional">
+              <div class="demo-record-header">
+                <span class="demo-badge">💼 Professional Record</span>
+                <span class="demo-status in-progress">🔄 In Progress</span>
+              </div>
+              <h3>Q4 Project Launch</h3>
+              <p>Managing client deliverables and team collaboration for product release</p>
+              <div class="demo-meta">📅 This Week • 🚀 Project • ☁️ Synced</div>
             </div>
           </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Trust Section -->
+  <section class="trust-section">
+    <div class="container">
+      <p class="trust-text">Trusted by companies worldwide</p>
+      <div class="trust-logos">
+        <div class="trust-logo">🔷 Enterprise</div>
+        <div class="trust-logo">⭐ Startups</div>
+        <div class="trust-logo">👥 Teams</div>
+        <div class="trust-logo">👤 Individuals</div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Record Types Section -->
+  <section class="record-types-section">
+    <div class="container">
+      <div class="section-header">
+        <h2 class="section-title">Two Powerful Record Types in One Platform</h2>
+        <p class="section-subtitle">Manage both daily and professional records seamlessly</p>
+      </div>
+      <div class="record-types-grid">
+        <div class="record-type-feature">
+          <div class="type-feature-icon">📅</div>
+          <h3>Daily Records</h3>
+          <p class="type-description">Perfect for tracking your everyday activities, personal tasks, health records, learning progress, and daily routines.</p>
+          <ul class="type-features-list">
+            <li>✓ Personal task tracking</li>
+            <li>✓ Health & fitness records</li>
+            <li>✓ Learning & education</li>
+            <li>✓ Daily routines & habits</li>
+            <li>✓ Personal projects</li>
+          </ul>
+        </div>
+        <div class="record-type-feature">
+          <div class="type-feature-icon">💼</div>
+          <h3>Professional Records</h3>
+          <p class="type-description">Ideal for managing work projects, business tasks, professional milestones, client records, and team collaborations.</p>
+          <ul class="type-features-list">
+            <li>✓ Work project tracking</li>
+            <li>✓ Business task management</li>
+            <li>✓ Client & customer records</li>
+            <li>✓ Team collaboration</li>
+            <li>✓ Professional milestones</li>
+          </ul>
         </div>
       </div>
     </div>
@@ -86,8 +181,8 @@
   <section id="features" class="features-section">
     <div class="container">
       <div class="section-header">
-        <h2 class="section-title">Powerful Features for Modern Teams</h2>
-        <p class="section-subtitle">Everything you need to stay organized and productive</p>
+        <h2 class="section-title">Powerful Features for Modern Professionals</h2>
+        <p class="section-subtitle">Everything you need to stay organized, productive, and professional</p>
       </div>
       <div class="features-grid">
         <div class="feature-card">
@@ -141,7 +236,7 @@
         <div class="step-item">
           <div class="step-number">2</div>
           <h3>Add Records</h3>
-          <p>Start adding your daily records with categories and status tracking.</p>
+          <p>Start adding your <strong>daily records</strong> or <strong>professional records</strong> with categories, status tracking, and smart organization.</p>
         </div>
         <div class="step-arrow">→</div>
         <div class="step-item">
@@ -155,7 +250,7 @@
 
   <!-- Pricing Section -->
   <section id="pricing" class="pricing-section">
-    <div class="container">
+  <div class="container">
       <div class="section-header">
         <h2 class="section-title">Simple, Transparent Pricing</h2>
         <p class="section-subtitle">Choose the plan that works for you</p>
@@ -220,14 +315,14 @@
     <div class="container">
       <div class="cta-content">
         <h2>Ready to Get Started?</h2>
-        <p>Join thousands of professionals who trust RecordFlow for their daily record management.</p>
+        <p>Join thousands of professionals who trust RecordFlow for managing both their <strong>daily records</strong> and <strong>professional records</strong>.</p>
         <div class="cta-buttons">
           <a href="signup.html" class="btn-cta-primary">Start Free Trial</a>
           <a href="login.html" class="btn-cta-secondary">Login to Account</a>
         </div>
       </div>
-    </div>
-  </section>
+      </div>
+      </section>
 
   <!-- Footer -->
   <footer class="footer">
@@ -247,7 +342,7 @@
       <div class="footer-bottom">
         <p>&copy; 2024 RecordFlow. All rights reserved.</p>
       </div>
-    </div>
+  </div>
   </footer>
 </body>
 </html>
